--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^7.2.2",
-    "@angular/core": "^7.2.2",
-    "@angular/forms": "^7.2.2",
-    "@angular/http": "^7.2.2",
-    "@angular/platform-browser": "^7.2.2",
-    "@angular/platform-browser-dynamic": "^7.2.2",
-    "@angular/router": "^7.2.2",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.0.0",
+    "@angular/common": "^7.2.11",
+    "@angular/core": "^7.2.11",
+    "@angular/forms": "^7.2.11",
+    "@angular/http": "^7.2.11",
+    "@angular/platform-browser": "^7.2.11",
+    "@angular/platform-browser-dynamic": "^7.2.11",
+    "@angular/router": "^7.2.11",
+    "@ionic-native/core": "^5.3.0",
+    "@ionic-native/splash-screen": "^5.3.0",
+    "@ionic-native/status-bar": "^5.3.0",
+    "@ionic/angular": "^4.1.2",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "7.1.4",
     "cordova-ios": "5.0.0",
@@ -37,23 +37,23 @@
     "crypto-js": "^3.1.9-1",
     "highcharts": "^7.0.3",
     "moment": "^2.24.0",
-    "ngx-avatar": "^3.2.0",
-    "rxjs": "~6.3.3",
+    "ngx-avatar": "^3.3.3",
+    "rxjs": "~6.4.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
-    "@angular-devkit/build-angular": "~0.12.3",
+    "@angular-devkit/build-angular": "~0.13.7",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.2",
-    "@angular/language-service": "~7.2.2",
-    "@ionic/angular-toolkit": "~1.4.0",
-    "@types/node": "~10.12.0",
+    "@angular/cli": "~7.3.7",
+    "@angular/compiler": "^7.2.11",
+    "@angular/compiler-cli": "^7.2.11",
+    "@angular/language-service": "^7.2.11",
+    "@ionic/angular-toolkit": "^1.4.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^10.12.30",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -63,7 +63,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
-    "ts-node": "~8.0.0",
+    "ts-node": "^8.0.3",
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
   },
