--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^7.2.11",
-    "@angular/core": "^7.2.11",
-    "@angular/forms": "^7.2.11",
-    "@angular/http": "^7.2.11",
-    "@angular/platform-browser": "^7.2.11",
-    "@angular/platform-browser-dynamic": "^7.2.11",
-    "@angular/router": "^7.2.11",
-    "@ionic-native/core": "^5.3.0",
-    "@ionic-native/splash-screen": "^5.3.0",
-    "@ionic-native/status-bar": "^5.3.0",
-    "@ionic/angular": "^4.1.2",
+    "@angular/common": "^7.2.12",
+    "@angular/core": "^7.2.12",
+    "@angular/forms": "^7.2.12",
+    "@angular/http": "^7.2.12",
+    "@angular/platform-browser": "^7.2.12",
+    "@angular/platform-browser-dynamic": "^7.2.12",
+    "@angular/router": "^7.2.12",
+    "@ionic-native/core": "^5.4.0",
+    "@ionic-native/splash-screen": "^5.4.0",
+    "@ionic-native/status-bar": "^5.4.0",
+    "@ionic/angular": "^4.2.0",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "7.1.4",
     "cordova-ios": "5.0.0",
@@ -35,22 +35,22 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "crypto-js": "^3.1.9-1",
-    "highcharts": "^7.0.3",
+    "highcharts": "^7.1.1",
     "moment": "^2.24.0",
-    "ngx-avatar": "^3.3.3",
+    "ngx-avatar": "^3.3.5",
     "rxjs": "~6.4.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
-    "@angular-devkit/build-angular": "~0.13.7",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "~7.3.7",
-    "@angular/compiler": "^7.2.11",
-    "@angular/compiler-cli": "^7.2.11",
-    "@angular/language-service": "^7.2.11",
-    "@ionic/angular-toolkit": "^1.4.1",
+    "@angular/cli": "~7.3.8",
+    "@angular/compiler": "^7.2.12",
+    "@angular/compiler-cli": "^7.2.12",
+    "@angular/language-service": "^7.2.12",
+    "@ionic/angular-toolkit": "^1.5.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^10.12.30",
@@ -65,7 +65,7 @@
     "protractor": "~5.4.0",
     "ts-node": "^8.0.3",
     "tslint": "~5.12.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.2.4"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -74,7 +74,9 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
